// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountEditReducers should handle all defined error types: rejected types 1`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
  },
  "type": "DELETE_ACCOUNT_REJECTED",
}
`;

exports[`AccountEditReducers should handle all defined error types: rejected types 2`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
  },
  "type": "UPDATE_ACCOUNT_REJECTED",
}
`;

exports[`AccountEditReducers should handle all defined error types: rejected types 3`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_REJECTED",
}
`;

exports[`AccountEditReducers should handle all defined fulfilled types: fulfilled types 1`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
  },
  "type": "DELETE_ACCOUNT_FULFILLED",
}
`;

exports[`AccountEditReducers should handle all defined fulfilled types: fulfilled types 2`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "pending": false,
      "show": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FULFILLED",
}
`;

exports[`AccountEditReducers should handle all defined fulfilled types: fulfilled types 3`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "pending": false,
      "show": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_FULFILLED",
}
`;

exports[`AccountEditReducers should handle all defined pending types: pending types 1`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": true,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
  },
  "type": "DELETE_ACCOUNT_PENDING",
}
`;

exports[`AccountEditReducers should handle all defined pending types: pending types 2`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": true,
      "show": false,
    },
  },
  "type": "UPDATE_ACCOUNT_PENDING",
}
`;

exports[`AccountEditReducers should handle all defined pending types: pending types 3`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": true,
      "show": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_PENDING",
}
`;

exports[`AccountEditReducers should handle specific defined types: defined type DELETE_ACCOUNT_HIDE 1`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
  },
  "type": "DELETE_ACCOUNT_HIDE",
}
`;

exports[`AccountEditReducers should handle specific defined types: defined type DELETE_ACCOUNT_SHOW 1`] = `
Object {
  "result": Object {
    "del": Object {
      "account": undefined,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": true,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
  },
  "type": "DELETE_ACCOUNT_SHOW",
}
`;

exports[`AccountEditReducers should handle specific defined types: defined type EDIT_ACCOUNT_HIDE 1`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE",
}
`;

exports[`AccountEditReducers should handle specific defined types: defined type EDIT_ACCOUNT_SHOW 1`] = `
Object {
  "result": Object {
    "del": Object {
      "account": Object {},
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "modal": Object {
      "account": undefined,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "pending": false,
      "show": true,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW",
}
`;
